--- a/src/templates/duo_mode.html
+++ b/src/templates/duo_mode.html
@@ -20,13 +20,13 @@
                     <div class="darkblue mode" onclick="select('Competition Mode');">
                         <h1>Compete</h1>
                         <img src="../images/compete.png" />
-                        <p>Compete in an energy-generating race</p>
+                        <p class="duo-mode-text">Compete in an energy-generating race</p>
                     </div>
 
                     <div class="darkblue mode" onclick="select('Cooperation Mode');">
                         <h1>Cooperate</h1>
                         <img src="../images/cooperate.png" />
-                        <p>Cycle cooperatively to power on an appliance of your choice</p>
+                        <p class="duo-mode-text">Cycle cooperatively to power on an appliance of your choice</p>
                     </div>
                 </div>
             </div>
