--- a/src/templates/appliance_info.html
+++ b/src/templates/appliance_info.html
@@ -21,16 +21,16 @@
                     </div>
 
                     <div class="appliance-info-text">
-                        <br /><br />
+                        <br />
                         <h2 id="appliance-name"></h2>
-                        <br /><br />
+                        <br />
                         <p id="appliance-wattage"></p>
-                        <p id="average-usage"></p>
+                        <!-- <p id="average-usage"></p> -->
                         <p id="average-cost"></p>
                         <p id="average-emissions"></p>
                         <br />
                         <h3 id="appliance-name-q"></h3>
-                        <br /><br /><br />
+                        <br />
                         <button id="selection-button" onclick="select()">SELECT</button>
                     </div>
                 </div>
