--- a/src/css/index.css
+++ b/src/css/index.css
@@ -471,3 +471,39 @@ body {
     margin-top: 75px;
     font-size: 2.5vh;
 }
+
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+.fade-in-image {
+    animation: fadeIn 2.5s; 
+}
+
+@keyframes rotate {
+    0% { rotate: 0deg; }
+    100% { rotate: 36000deg; }
+}
+
+.rotate-image {
+    animation: rotate 240s;
+    animation-iteration-count: 10;
+}
+
+#laptop-screen {
+    position: absolute;
+    margin-top: -302.5px;
+    margin-left: -152.5px;
+    height: 185px;
+    opacity: 0%;
+}
+
+#washing-machine {
+    position: absolute;
+    margin-top: 130px;
+    margin-left: -225px;
+    height: 150px;
+    opacity: 90%;
+}
