--- a/src/css/index.css
+++ b/src/css/index.css
@@ -507,3 +507,20 @@ body {
     height: 150px;
     opacity: 90%;
 }
+
+#incandescent-light {
+    position: absolute;
+    height: 260px;
+    width: 210px;
+    margin-top: 25px;
+    margin-left: -259px;
+    opacity: 0%;
+}
+
+#led-light {
+    position: absolute;
+    height: 210px;
+    margin-top: -7.5px;
+    margin-left: -242.5px;
+    opacity: 0%;
+}
