--- a/src/templates/start_screen.html
+++ b/src/templates/start_screen.html
@@ -36,6 +36,23 @@
                         <img id="image-right" class="start-screen-element" src="../images/girl-on-bicycle-white.png" />
                         <h3 id="duration" class="start-screen-element"></h3>
                     </div>
+
+                    <div id="modal" class="modal">
+                        <div class="modal-content">
+                            <span id="close">&times;</span>
+                            <div class="warning-icon">
+                                <img src="../images/warning-icon.png"/>
+                            </div>
+                            <div class="modal-heading">
+                                <h2> Navigating to the previous page will end the challenge </h2>
+                            </div>
+                            <h3 id="modal-subheading"> Are you sure you want to proceed?</h3>
+                            <button id="yes-button">YES</button>
+                            <button id="no-button">NO</button>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
