Duo mode challenge pause functionality
- The duo challenge pauses for both players when one of them pauses it
- The challenge resumes when the user who paused it resumes it

--- a/src/templates/start_screen.html
+++ b/src/templates/start_screen.html
@@ -52,10 +52,23 @@
                         </div>
                     </div>
 
+                    <div id="modal-two" class="modal">
+                        <div class="modal-content">
+                            <div class="warning-icon">
+                                <img src="../images/warning-icon.png"/>
+                            </div>
+                            <div class="modal-heading">
+                                <h2> Challenge paused by the other player </h2>
+                            </div>
+                            <h3 id="modal-subheading"> Please wait until the other player resumes the challenge </h3>
+                        </div>
+                    </div>
 
                 </div>
             </div>
         </div>
+        <script src="../javascript/bicycle_settings.js"></script>
         <script src="../javascript/renderer.js"></script>
+        <script src="../javascript/results_screen.js"></script>
     </body>
 </html>
