Duo mode end challenge functionality
- Players have the option to quit the challenge
- The other player who stayed has the option to return to the main screen or retry the same challenge in solo mode

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -677,3 +677,15 @@ body {
     text-decoration: none;
     cursor: pointer;
   }
+
+.modal-three-button {
+    background-color: #61AAFF;
+    color: white;
+    border: 5px solid #4D9FFF;
+    height: 75px;
+    width: 60%;
+    font-size: 35px;
+    border-radius: 20px;
+    margin: 45px auto;
+    display: block;
+}
