--- a/src/templates/start_screen.html
+++ b/src/templates/start_screen.html
@@ -64,6 +64,22 @@
                         </div>
                     </div>
 
+                    <div id="modal-three" class="modal">
+                        <div class="modal-content">
+                            <div class="warning-icon">
+                                <img src="../images/warning-icon.png"/>
+                            </div>
+                            <div class="modal-heading">
+                                <h2 style="margin-top: 45px;"> The other player quit the challenge </h2>
+                            </div>
+                            <div style="margin-top: 65px;">
+                                <button id="return_to_main_page" class="modal-three-button">Return to the main page</button>
+                                <button id="setup_challenge_in_solo_mode" class="modal-three-button">Try the challenge in solo mode</button>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
