Updated appliance info and made headings more specific

--- a/src/templates/welcome_screen.html
+++ b/src/templates/welcome_screen.html
@@ -13,7 +13,7 @@
                     <img src="../images/bicycle.png" />
                 </div>
                 <div class="inner-right">
-                    <h1>Can you power on household appliances by cycling?</h1>
+                    <h1>Can you run household appliances by cycling?</h1>
                     <h2>Discover the environmental impact of six common household appliances and attempt to power on their digital twins through cycling.</h2>
                     <div id="touchscreen-message">
                         <p style="width: 275px; margin-top:-50%; margin-left: 50px;">Touch the screen to continue</p>
