--- a/src/templates/appliance_info.html
+++ b/src/templates/appliance_info.html
@@ -9,7 +9,7 @@
         <div class="outer-container">
             <div class="content-container">
                 <div class="text-container">
-                    <h1>Can you power on these household appliances?</h1>
+                    <h1>Can you run these household appliances?</h1>
                     <h2>Select an appliance to get started</h2>
                 </div>
 
@@ -25,7 +25,6 @@
                         <h2 id="appliance-name"></h2>
                         <br />
                         <p id="appliance-wattage"></p>
-                        <!-- <p id="average-usage"></p> -->
                         <p id="average-cost"></p>
                         <p id="average-emissions"></p>
                         <br />
