--- a/src/templates/appliance_selection.html
+++ b/src/templates/appliance_selection.html
@@ -9,7 +9,7 @@
         <div class="outer-container">
             <div class="content-container">
                 <div class="text-container">
-                    <h1>Can you power on these household appliances?</h1>
+                    <h1>Can you run these household appliances?</h1>
                     <h2>Select an appliance to get started</h2>
                 </div>
                 <div class="selection">
