--- a/src/templates/welcome_screen.html
+++ b/src/templates/welcome_screen.html
@@ -8,8 +8,12 @@
     <body onclick="next();" style="background: linear-gradient(180deg, #50C0FF 0%, #99DBF8 31.77%, #DDFBFF 66.67%, #FFFFFF 100%);">
         <div class="outer">
             <img src="../images/clouds.png" style="object-fit: fill; margin-left: -5%; margin-top:-10px; width: 110%; height: 100%;"/>
+
             <div class="inner">
-                <div class="inner-left">
+                <div id="university-logo">
+                    <img src="../images/university_of_glasgow_logo.PNG" height="150px"/>
+                </div>
+                <div class="inner-left">                
                     <img src="../images/bicycle.png" />
                 </div>
                 <div class="inner-right">
