--- a/src/templates/left_display.html
+++ b/src/templates/left_display.html
@@ -8,20 +8,24 @@
     <body>
         <div class="outer-container">
             <div class="content-container" style="background: none; border-color: transparent; text-align: center;">
+                <div id="admin-mode"> 
+                    <h2> ADMIN SETUP </h2>
+                </div>
+                
                 <div class="text-container">
                     <h1>CYCLING PEDAL POWER DISPLAY</h1>
-                    <p style="font-size: 30px;">Drag the application screen onto the left display monitor and click continue</p>
+                    <p style="font-size: 30px;">Drag the application screen onto the left display monitor and click continue. </p>
                     <h3>&nbsp</h3>
                 </div>
 
                 <div class="display-selection">
                     <div class="display">
-                        <h1 style="margin-top: 10%;">LEFT</h1>
-                        <img src="../images/monitor.png" height="45%" style="margin-top: 2.5%;">
-                        <h1 style="margin-top: 7.5%;">MONITOR</h1>
+                        <h1 style="margin-top: 5%;">LEFT</h1>
+                        <img src="../images/monitor.png" height="45%">
+                        <h1 style="margin-top: 3.5%;">MONITOR</h1>
+                        <button id="display-selection-continue-button" onclick="select('left');">CONTINUE</button>
                     </div>
                 </div>
-                <button onclick="select('left');" style="margin-top: 7.5%;">CONTINUE</button>
             </div>
         </div>
         <script src="../javascript/display_selection.js"></script>
