--- a/src/templates/right_display.html
+++ b/src/templates/right_display.html
@@ -8,6 +8,10 @@
     <body>
         <div class="outer-container">
             <div class="content-container" style="background: none; border-color: transparent; text-align: center;">
+                <div id="admin-mode"> 
+                    <h2> ADMIN SETUP </h2>
+                </div>
+                
                 <div class="text-container">
                     <h1>CYCLING PEDAL POWER DISPLAY</h1>
                     <p style="font-size: 30px;">Drag the application screen onto the right display monitor and click continue</p>
@@ -16,12 +20,12 @@
 
                 <div class="display-selection">
                     <div class="display">
-                        <h1 style="margin-top: 10%;">RIGHT</h1>
-                        <img src="../images/monitor.png" height="45%" style="margin-top: 2.5%;"/>
-                        <h1 style="margin-top: 7.5%;">MONITOR</h1>
+                        <h1 style="margin-top: 5%;">RIGHT</h1>
+                        <img src="../images/monitor.png" height="45%"/>
+                        <h1 style="margin-top: 3.5%;">MONITOR</h1>
+                        <button id="display-selection-continue-button" onclick="select('right');">CONTINUE</button>
                     </div>
                 </div>
-                <button onclick="select('right');" style="margin-top: 7.5%;">CONTINUE</button>
             </div>
         </div>
         <script src="../javascript/display_selection.js"></script>
