Start screen modifications
- Loading logo added to the start screen of a solo mode challenge to ensure that the bicycle is connected before the challenge timer starts
- Bicycle connections for duo mode moved to the synchronization screen

--- a/src/templates/synchronization_screen.html
+++ b/src/templates/synchronization_screen.html
@@ -26,7 +26,7 @@
                     </div>
 
                     <div id="middle">
-                        <button id="button" class="start-screen-element continue">Continue</button>
+                        <button id="button" class="start-screen-element continue">Pair bikes</button>
                     </div>
 
                     <div id="right">
@@ -39,6 +39,7 @@
                 </div>
             </div>
         </div>
+        <script src="../javascript/bicycle_settings.js"></script>
         <script src="../javascript/synchronization_screen.js"></script>
     </body>
 </html>
